--- a/accounts.html
+++ b/accounts.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "___-___.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "accounts.css"], "outOfDate":[]};
 </script>
   
-  <title>Обо мне</title>
+  <title>Accounts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3971623359"/>
-  <link rel="stylesheet" type="text/css" href="css/___-___.css?crc=289622009" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/accounts.css?crc=289622009" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,22 +41,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="%d0%b0%d0%ba%d0%ba%d0%b0%d1%83%d0%bd%d1%82%d1%8b.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="%d1%84%d0%b0%d0%b9%d0%bb%d1%8b.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%ba%d0%be%d0%bd%d1%82%d0%b0%d0%ba%d1%82.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1050" href="%d0%be%d0%b1%d0%be-%d0%bc%d0%bd%d0%b5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
     </div>
    </nav>
    <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
    <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
     <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%b0%d1%82%d1%8c.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
      <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
       <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
        <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
