--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home</title>
+  <title>News/page/1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=316876942" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=444776264" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -93,17 +93,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pmenuu36173"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36173"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36174"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36177" href="homepage2.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36180" alt="2" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36177" href="newspage2.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36180" alt="2" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu36181"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36182"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36185" href="homepage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36188" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36185" href="newspage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36188" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu36189"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36190"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36191" href="homepage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36192" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36191" href="newspage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36192" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
    </div>
@@ -117,12 +117,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pmenuu36197"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36197"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36198"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36201" href="homepage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36203" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36201" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36203" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu36205"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36206"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36209" href="homepage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36210-4"><!-- content --><p>&gt;</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36209" href="newspage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36210-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -161,8 +161,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="verticalspacer" data-offset-top="526" data-content-above-spacer="581" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
