--- a/accounts.html
+++ b/accounts.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Accounts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/accounts.css?crc=289622009" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/accounts.css?crc=4024434492" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -27,51 +27,58 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="grpelem" id="u2056"><!-- content -->
-    <div class="fluid_height_spacer"></div>
-   </div>
-   <div class="grpelem" id="u847"><!-- content -->
-    <div class="fluid_height_spacer"></div>
-   </div>
-   <div class="grpelem" id="u1026"><!-- content -->
-    <div class="fluid_height_spacer"></div>
-   </div>
-   <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
-    <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-    </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-    </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-    </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-    </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-    </div>
-   </nav>
-   <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
-   <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
-    <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-     <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
-      <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
-       <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
-       <li class="MenuItemContainer borderbox clearfix colelem" id="u1619"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1620"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1623-4"><!-- content --><div id="u1623-3"><p>Яндекс.Деньги</p></div></div></div></li>
-       <li class="MenuItemContainer borderbox clearfix colelem" id="u1598"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1599"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1602-4"><!-- content --><div id="u1602-3"><p>QIWI</p></div></div></div></li>
-      </ul>
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="pu2056"><!-- group -->
+     <div class="grpelem" id="u2056"><!-- content -->
+      <div class="fluid_height_spacer"></div>
      </div>
+     <div class="grpelem" id="u847"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="grpelem" id="u1026"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      </div>
+     </nav>
+     <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
+     <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
+      <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+       <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
+        <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
+         <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
+         <li class="MenuItemContainer borderbox clearfix colelem" id="u1619"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1620"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1623-4"><!-- content --><div id="u1623-3"><p>Яндекс.Деньги</p></div></div></div></li>
+         <li class="MenuItemContainer borderbox clearfix colelem" id="u1598"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1599"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1602-4"><!-- content --><div id="u1602-3"><p>QIWI</p></div></div></div></li>
+        </ul>
+       </div>
+      </div>
+     </nav>
     </div>
-   </nav>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="211" data-content-below-spacer="500"></div>
+    <div class="colelem" id="u37452"><!-- custom html -->
+     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSmgvfnqsOlZBSj7MDC1_qC4JzZMPxWBdpt0yeB3mahl1zsQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>
+    </div>
+    <div class="verticalspacer" data-offset-top="747" data-content-above-spacer="747" data-content-below-spacer="60"></div>
+   </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
