--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3896259758" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3844298361" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -100,8 +100,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
