--- a/newspage2.html
+++ b/newspage2.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "homepage10.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "newspage2.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home/page/10</title>
+  <title>News/page/2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/homepage10.css?crc=3944401760" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage2.css?crc=4152588182" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -58,50 +58,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pmenuu15634"><!-- group -->
-    <nav class="MenuBar clearfix" id="menuu15634"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15635"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u15636" href="homepage9.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u15638-4"><!-- content --><p>&lt;</p></div></a>
+   <div class="clearfix grpelem" id="pmenuu36336"><!-- group -->
+    <nav class="MenuBar clearfix" id="menuu36336"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36337"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36340" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36342-4"><!-- content --><p>&lt;</p></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15539"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15540"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u15541" href="homepage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u15544" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu36344"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36345"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36346" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36348" alt="1" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15270"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15271"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u15272" href="homepage10.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u15273-4"><!-- rasterized frame --><div id="u15273-4_clip"><img alt="10" width="25" height="36" src="images/u15273-4-a.png?crc=75443498"/></div></div></a>
+    <nav class="MenuBar clearfix" id="menuu36352"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36353"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36356" href="newspage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36358-4"><!-- rasterized frame --><div id="u36358-4_clip"><img alt="2" width="15" height="36" src="images/u36358-4-a.png?crc=316806109"/></div></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15692"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15693"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u15694"><!-- horizontal box -->
-       <img class="MenuItemLabel NoWrap grpelem" id="u15695" alt="..." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-      </div>
+    <nav class="MenuBar clearfix" id="menuu36360"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36361"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36364" href="newspage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36367" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15626"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15627"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u15628"><!-- horizontal box -->
-       <img class="MenuItemLabel NoWrap grpelem" id="u15631" alt="..." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-      </div>
+    <nav class="MenuBar clearfix" id="menuu36368"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36369"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36370" href="newspage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36373" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15426"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15427"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u15428"><!-- horizontal box -->
-       <img class="MenuItemLabel NoWrap grpelem" id="u15429" alt="..." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-      </div>
+    <nav class="MenuBar clearfix" id="menuu36376"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36377"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36380" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36382" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu15367"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u15368"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u15371"><!-- horizontal box -->
-       <div class="MenuItemLabel NoWrap clearfix grpelem" id="u15372-4"><!-- content -->
-        <p>&gt;</p>
-       </div>
-      </div>
+    <nav class="MenuBar clearfix" id="menuu36384"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36385"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36388" href="newspage3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36389-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -122,23 +112,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <div id="u15416-wrapper">
-    <a class="nonblock nontext anim_swing" id="u15416" href="homepage10.html#werh"><!-- simple frame --></a>
+   <div id="u34636-wrapper">
+    <a class="nonblock nontext anim_swing" id="u34636" href="newspage2.html#werh"><!-- simple frame --></a>
    </div>
    <a class="anchor_item grpelem" id="werh"></a>
-   <div id="u15524-4-wrapper">
-    <div class="clearfix" id="u15524-4"><!-- content -->
+   <div id="u34670-4-wrapper">
+    <div class="clearfix" id="u34670-4"><!-- content -->
      <p>^</p>
     </div>
    </div>
-   <div id="u15657-4-wrapper">
-    <img id="u15657-4" alt="Наверх" src="images/u15657-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
+   <div id="u34671-4-wrapper">
+    <img id="u34671-4" alt="Наверх" src="images/u34671-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="495" data-content-below-spacer="500"></div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
@@ -147,14 +137,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
    <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
    <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
-   <img class="preload" src="images/u15544-r.png?crc=475098218" alt=""/>
-   <img class="preload" src="images/u15544-a.png?crc=475098218" alt=""/>
-   <img class="preload" src="images/u15695-r.png?crc=295429183" alt=""/>
-   <img class="preload" src="images/u15695-a.png?crc=295429183" alt=""/>
-   <img class="preload" src="images/u15631-r.png?crc=295429183" alt=""/>
-   <img class="preload" src="images/u15631-a.png?crc=295429183" alt=""/>
-   <img class="preload" src="images/u15429-r.png?crc=295429183" alt=""/>
-   <img class="preload" src="images/u15429-a.png?crc=295429183" alt=""/>
+   <img class="preload" src="images/u36348-r.png?crc=355493379" alt=""/>
+   <img class="preload" src="images/u36348-a.png?crc=355493379" alt=""/>
+   <img class="preload" src="images/u36367-r.png?crc=293193988" alt=""/>
+   <img class="preload" src="images/u36367-a.png?crc=293193988" alt=""/>
+   <img class="preload" src="images/u36373-r.png?crc=187296679" alt=""/>
+   <img class="preload" src="images/u36373-a.png?crc=187296679" alt=""/>
+   <img class="preload" src="images/u36382-r.png?crc=4217473646" alt=""/>
+   <img class="preload" src="images/u36382-a.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
   </div>
