--- a/newspage4.html
+++ b/newspage4.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "homepage5.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "newspage4.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home/page/5</title>
+  <title>News/page/4</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/homepage5.css?crc=3838884236" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage4.css?crc=520285954" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -58,40 +58,40 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pmenuu36846"><!-- group -->
-    <nav class="MenuBar clearfix" id="menuu36846"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36847"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36850" href="homepage4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36851-4"><!-- content --><p>&lt;</p></div></a>
+   <div class="clearfix grpelem" id="pmenuu36677"><!-- group -->
+    <nav class="MenuBar clearfix" id="menuu36677"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36678"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36681" href="newspage3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36684-4"><!-- content --><p>&lt;</p></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36854"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36855"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36858" href="homepage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36861" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu36685"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36686"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36689" href="newspage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36690" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36862"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36863"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36866" href="homepage5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36868-4"><!-- rasterized frame --><div id="u36868-4_clip"><img alt="5" width="15" height="36" src="images/u36868-4-a.png?crc=4217473646"/></div></div></a>
+    <nav class="MenuBar clearfix" id="menuu36693"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36694"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36695" href="newspage4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36697-4"><!-- rasterized frame --><div id="u36697-4_clip"><img alt="4" width="17" height="36" src="images/u36697-4-a.png?crc=187296679"/></div></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36870"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36871"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36872" href="homepage6.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36874" alt="6" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu36701"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36702"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36705" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36707" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36878"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36879"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36880" href="homepage7.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36881" alt="7" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu36709"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36710"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36711" href="newspage6.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36713" alt="6" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36886"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36887"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36888" href="homepage8.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36890" alt="8" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu36717"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36718"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36719" href="newspage7.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36720" alt="7" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36894"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36895"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36898" href="homepage6.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36900-4"><!-- content --><p>&gt;</p></div></a>
+    <nav class="MenuBar clearfix" id="menuu36725"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u36726"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36729" href="newspage5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36732-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -112,23 +112,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <div id="u33397-wrapper">
-    <a class="nonblock nontext anim_swing" id="u33397" href="homepage5.html#werh"><!-- simple frame --></a>
+   <div id="u32270-wrapper">
+    <a class="nonblock nontext anim_swing" id="u32270" href="newspage4.html#werh"><!-- simple frame --></a>
    </div>
    <a class="anchor_item grpelem" id="werh"></a>
-   <div id="u33395-4-wrapper">
-    <div class="clearfix" id="u33395-4"><!-- content -->
+   <div id="u32304-4-wrapper">
+    <div class="clearfix" id="u32304-4"><!-- content -->
      <p>^</p>
     </div>
    </div>
-   <div id="u33396-4-wrapper">
-    <img id="u33396-4" alt="Наверх" src="images/u33396-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
+   <div id="u32305-4-wrapper">
+    <img id="u32305-4" alt="Наверх" src="images/u32305-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
@@ -137,14 +137,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
    <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
    <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
-   <img class="preload" src="images/u36861-r.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u36861-a.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u36874-r.png?crc=459097807" alt=""/>
-   <img class="preload" src="images/u36874-a.png?crc=459097807" alt=""/>
-   <img class="preload" src="images/u36881-r.png?crc=3761878106" alt=""/>
-   <img class="preload" src="images/u36881-a.png?crc=3761878106" alt=""/>
-   <img class="preload" src="images/u36890-r.png?crc=51753110" alt=""/>
-   <img class="preload" src="images/u36890-a.png?crc=51753110" alt=""/>
+   <img class="preload" src="images/u36690-r.png?crc=293193988" alt=""/>
+   <img class="preload" src="images/u36690-a.png?crc=293193988" alt=""/>
+   <img class="preload" src="images/u36707-r.png?crc=4217473646" alt=""/>
+   <img class="preload" src="images/u36707-a.png?crc=4217473646" alt=""/>
+   <img class="preload" src="images/u36713-r.png?crc=459097807" alt=""/>
+   <img class="preload" src="images/u36713-a.png?crc=459097807" alt=""/>
+   <img class="preload" src="images/u36720-r.png?crc=3761878106" alt=""/>
+   <img class="preload" src="images/u36720-a.png?crc=3761878106" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
   </div>
