--- a/newspage6.html
+++ b/newspage6.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "homepage6.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "newspage6.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home/page/6</title>
+  <title>News/page/6</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/homepage6.css?crc=4201939613" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage6.css?crc=332284149" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -61,37 +61,37 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pmenuu37015"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu37015"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37016"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37019" href="homepage5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37022-4"><!-- content --><p>&lt;</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37019" href="newspage5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37022-4"><!-- content --><p>&lt;</p></div></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37023"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37024"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37027" href="homepage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37030" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37027" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37030" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37031"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37032"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u37035" href="homepage6.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u37037-4"><!-- rasterized frame --><div id="u37037-4_clip"><img alt="6" width="15" height="36" src="images/u37037-4-a.png?crc=459097807"/></div></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u37035" href="newspage6.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u37037-4"><!-- rasterized frame --><div id="u37037-4_clip"><img alt="6" width="15" height="36" src="images/u37037-4-a.png?crc=459097807"/></div></div></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37039"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37040"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37041" href="homepage7.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37044" alt="7" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37041" href="newspage7.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37044" alt="7" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37047"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37048"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37049" href="homepage8.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37051" alt="8" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37049" href="newspage8.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37051" alt="8" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37055"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37056"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37057" href="homepage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37059" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37057" href="newspage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37059" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37063"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37064"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37067" href="homepage7.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37070-4"><!-- content --><p>&gt;</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37067" href="newspage7.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37070-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -113,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </nav>
    </div>
    <div id="u28619-wrapper">
-    <a class="nonblock nontext anim_swing" id="u28619" href="homepage6.html#werh"><!-- simple frame --></a>
+    <a class="nonblock nontext anim_swing" id="u28619" href="newspage6.html#werh"><!-- simple frame --></a>
    </div>
    <a class="anchor_item grpelem" id="werh"></a>
    <div id="u28617-4-wrapper">
@@ -127,8 +127,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
