--- a/newspage7.html
+++ b/newspage7.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "homepage7.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "newspage7.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home/page/7</title>
+  <title>News/page/7</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/homepage7.css?crc=4211897683" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage7.css?crc=3897476323" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -61,37 +61,37 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="pmenuu37184"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu37184"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37185"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37188" href="homepage6.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37189-4"><!-- content --><p>&lt;</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37188" href="newspage6.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37189-4"><!-- content --><p>&lt;</p></div></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37192"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37193"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37194" href="homepage6.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37197" alt="6" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37194" href="newspage6.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37197" alt="6" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37200"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37201"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u37202" href="homepage7.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u37204-4"><!-- rasterized frame --><div id="u37204-4_clip"><img alt="7" width="15" height="36" src="images/u37204-4-a.png?crc=3761878106"/></div></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u37202" href="newspage7.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u37204-4"><!-- rasterized frame --><div id="u37204-4_clip"><img alt="7" width="15" height="36" src="images/u37204-4-a.png?crc=3761878106"/></div></div></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37208"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37209"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37212" href="homepage8.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37214" alt="8" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37212" href="newspage8.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37214" alt="8" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37216"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37217"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37218" href="homepage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37219" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37218" href="newspage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37219" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37224"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37225"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37228" href="homepage10.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37230" alt="10" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37228" href="newspage10.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u37230" alt="10" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu37232"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u37233"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37236" href="homepage8.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37239-4"><!-- content --><p>&gt;</p></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u37236" href="newspage8.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u37239-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -113,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </nav>
    </div>
    <div id="u29699-wrapper">
-    <a class="nonblock nontext anim_swing" id="u29699" href="homepage7.html#werh"><!-- simple frame --></a>
+    <a class="nonblock nontext anim_swing" id="u29699" href="newspage7.html#werh"><!-- simple frame --></a>
    </div>
    <a class="anchor_item grpelem" id="werh"></a>
    <div id="u29682-4-wrapper">
@@ -127,8 +127,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
