--- a/newspage8.html
+++ b/newspage8.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "homepage2.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "newspage8.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Home/page/2</title>
+  <title>News/page/8</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=197090628"/>
-  <link rel="stylesheet" type="text/css" href="css/homepage2.css?crc=37423549" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage8.css?crc=273964298" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="ГЛАВНАЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -58,40 +58,42 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pmenuu36336"><!-- group -->
-    <nav class="MenuBar clearfix" id="menuu36336"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36337"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36340" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36342-4"><!-- content --><p>&lt;</p></div></a>
+   <div class="clearfix grpelem" id="pmenuu27539"><!-- group -->
+    <nav class="MenuBar clearfix" id="menuu27539"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27540"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u27543" href="newspage7.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u27545-4"><!-- content --><p>&lt;</p></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36344"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36345"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36346" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36348" alt="1" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu27547"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27548"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u27549" href="newspage7.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u27552" alt="7" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36352"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36353"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36356" href="homepage2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36358-4"><!-- rasterized frame --><div id="u36358-4_clip"><img alt="2" width="15" height="36" src="images/u36358-4-a.png?crc=316806109"/></div></div></a>
+    <nav class="MenuBar clearfix" id="menuu27555"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27556"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u27557" href="newspage8.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u27558-4"><!-- rasterized frame --><div id="u27558-4_clip"><img alt="8" width="17" height="36" src="images/u27558-4-a.png?crc=51753110"/></div></div></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36360"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36361"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36364" href="homepage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36367" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu27563"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27564"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u27565" href="newspage9.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u27568" alt="9" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36368"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36369"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36370" href="homepage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36373" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu27571"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27572"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u27573" href="newspage10.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u27574" alt="10" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36376"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36377"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36380" href="homepage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36382" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    <nav class="MenuBar clearfix" id="menuu27579"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27580"><!-- vertical box -->
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u27581"><!-- horizontal box -->
+       <img class="MenuItemLabel NoWrap grpelem" id="u27583" alt="..." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+      </div>
      </div>
     </nav>
-    <nav class="MenuBar clearfix" id="menuu36384"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u36385"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36388" href="homepage3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36389-4"><!-- content --><p>&gt;</p></div></a>
+    <nav class="MenuBar clearfix" id="menuu27587"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u27588"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u27591" href="newspage9.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u27594-4"><!-- content --><p>&gt;</p></div></a>
      </div>
     </nav>
    </div>
@@ -112,23 +114,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <div id="u34636-wrapper">
-    <a class="nonblock nontext anim_swing" id="u34636" href="homepage2.html#werh"><!-- simple frame --></a>
+   <div id="u26780-wrapper">
+    <a class="nonblock nontext anim_swing" id="u26780" href="newspage8.html#werh"><!-- simple frame --></a>
    </div>
    <a class="anchor_item grpelem" id="werh"></a>
-   <div id="u34670-4-wrapper">
-    <div class="clearfix" id="u34670-4"><!-- content -->
+   <div id="u26798-4-wrapper">
+    <div class="clearfix" id="u26798-4"><!-- content -->
      <p>^</p>
     </div>
    </div>
-   <div id="u34671-4-wrapper">
-    <img id="u34671-4" alt="Наверх" src="images/u34671-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
+   <div id="u26755-4-wrapper">
+    <img id="u26755-4" alt="Наверх" src="images/u26755-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="494" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=4047527838" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3866654065" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
    <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
    <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
@@ -137,14 +139,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
    <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
    <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
-   <img class="preload" src="images/u36348-r.png?crc=355493379" alt=""/>
-   <img class="preload" src="images/u36348-a.png?crc=355493379" alt=""/>
-   <img class="preload" src="images/u36367-r.png?crc=293193988" alt=""/>
-   <img class="preload" src="images/u36367-a.png?crc=293193988" alt=""/>
-   <img class="preload" src="images/u36373-r.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u36373-a.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u36382-r.png?crc=4217473646" alt=""/>
-   <img class="preload" src="images/u36382-a.png?crc=4217473646" alt=""/>
+   <img class="preload" src="images/u27552-r.png?crc=3761878106" alt=""/>
+   <img class="preload" src="images/u27552-a.png?crc=3761878106" alt=""/>
+   <img class="preload" src="images/u27568-r.png?crc=475098218" alt=""/>
+   <img class="preload" src="images/u27568-a.png?crc=475098218" alt=""/>
+   <img class="preload" src="images/u27574-r.png?crc=75443498" alt=""/>
+   <img class="preload" src="images/u27574-a.png?crc=75443498" alt=""/>
+   <img class="preload" src="images/u27583-r.png?crc=295429183" alt=""/>
+   <img class="preload" src="images/u27583-a.png?crc=295429183" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
   </div>
