--- a/newspage10.html
+++ b/newspage10.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News/page/10</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
-  <link rel="stylesheet" type="text/css" href="css/newspage10.css?crc=210668678" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
+  <link rel="stylesheet" type="text/css" href="css/newspage10.css?crc=74359219" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -43,17 +43,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
     </div>
@@ -111,7 +110,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
      <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+      <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
+       <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
+        <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+        <div class="fluid_height_spacer"></div>
+       </div>
+      </div>
       <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
        <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
         <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
@@ -139,14 +143,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
-   <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
-   <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
-   <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
-   <img class="preload" src="images/u1037-a.png?crc=388286857" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=144375484" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
-   <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
-   <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
+   <img class="preload" src="images/u1037-r.png?crc=3987155826" alt=""/>
+   <img class="preload" src="images/u1037-a.png?crc=3875418341" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u15544-r.png?crc=475098218" alt=""/>
    <img class="preload" src="images/u15544-a.png?crc=475098218" alt=""/>
    <img class="preload" src="images/u15695-r.png?crc=295429183" alt=""/>
