--- a/competition.html
+++ b/competition.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "accounts.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "competition.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Accounts</title>
+  <title>Competition</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
-  <link rel="stylesheet" type="text/css" href="css/accounts.css?crc=4024434492" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
+  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=3997064722" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -43,23 +43,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
      <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
      <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
       <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
+        <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
+         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+         <div class="fluid_height_spacer"></div>
+        </div>
+       </div>
        <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
         <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
          <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
@@ -70,25 +74,55 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="colelem" id="u37452"><!-- custom html -->
-     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSmgvfnqsOlZBSj7MDC1_qC4JzZMPxWBdpt0yeB3mahl1zsQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>
+    <div class="clearfix colelem" id="ppu37961-4"><!-- group -->
+     <div class="clearfix grpelem" id="pu37961-4"><!-- group -->
+      <img class="grpelem" id="u37961-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter " src="images/u37961-4.png?crc=133278613" data-image-width="199"/><!-- rasterized frame -->
+      <div class="grpelem" id="u37962"><!-- simple frame --></div>
+     </div>
+     <div class="clearfix grpelem" id="u37928"><!-- column -->
+      <div class="clearfix colelem" id="u37925"><!-- group -->
+       <img class="grpelem" id="u38003-4" alt="Этап 1" src="images/u38003-4.png?crc=214262454" data-image-width="68"/><!-- rasterized frame -->
+      </div>
+      <div class="clearfix colelem" id="u37994"><!-- group -->
+       <img class="grpelem" id="u38000-4" alt="дд-мм-гг, чч:мм" src="images/u38000-4.png?crc=4225080953" data-image-width="95"/><!-- rasterized frame -->
+      </div>
+     </div>
+     <div class="grpelem" id="u37991"><!-- state-based BG images -->
+      <img alt="TinyWhoop Madness" src="images/blank.gif?crc=4208392903"/>
+      <div class="fluid_height_spacer"></div>
+     </div>
     </div>
-    <div class="verticalspacer" data-offset-top="747" data-content-above-spacer="747" data-content-below-spacer="60"></div>
+    <div class="clearfix colelem" id="pu37967"><!-- group -->
+     <div class="grpelem" id="u37967"><!-- simple frame --></div>
+     <div class="grpelem" id="u37974"><!-- simple frame --></div>
+    </div>
+    <div class="clearfix colelem" id="pu37968"><!-- group -->
+     <div class="grpelem" id="u37968"><!-- simple frame --></div>
+     <img class="grpelem" id="u37973-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No " src="images/u37973-4.png?crc=4125754407" data-image-width="199"/><!-- rasterized frame -->
+    </div>
+    <div class="clearfix colelem" id="pu37979"><!-- group -->
+     <div class="grpelem" id="u37979"><!-- simple frame --></div>
+     <div class="grpelem" id="u37982"><!-- simple frame --></div>
+    </div>
+    <div class="clearfix colelem" id="pu37980"><!-- group -->
+     <div class="grpelem" id="u37980"><!-- simple frame --></div>
+     <img class="grpelem" id="u37981-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No " src="images/u37981-4.png?crc=4125754407" data-image-width="199"/><!-- rasterized frame -->
+    </div>
+    <div class="verticalspacer" data-offset-top="1166" data-content-above-spacer="1166" data-content-below-spacer="60"></div>
    </div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
-   <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
-   <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
-   <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
-   <img class="preload" src="images/u1037-a.png?crc=388286857" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=144375484" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
-   <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
-   <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
+   <img class="preload" src="images/u1037-r.png?crc=3987155826" alt=""/>
+   <img class="preload" src="images/u1037-a.png?crc=3875418341" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
+   <img class="preload" src="images/u37991-r.png?crc=4129216664" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
