--- a/contacts.html
+++ b/contacts.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "contact.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpdisclosure.js", "contacts.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Contact</title>
+  <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=205724103"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3844298361" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=493365755" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -43,23 +43,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1028"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1031" href="accounts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1034" alt="АККАУНТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+      <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="files.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="ФАЙЛЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1036" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="contact.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="КОНТАКТ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1049"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1050" href="about-me.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1051" alt="ОБО МНЕ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
      <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
      <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
       <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518" href="support.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images --><img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
+        <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
+         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+         <div class="fluid_height_spacer"></div>
+        </div>
+       </div>
        <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
         <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
          <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
@@ -70,53 +74,43 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <form class="form-grp clearfix colelem" id="widgetu1712" method="post" enctype="multipart/form-data" action="scripts/form-u1712.php"><!-- none box -->
-     <div class="fld-grp clearfix grpelem" id="widgetu1746" data-required="true"><!-- none box -->
-      <label class="fld-label actAsDiv clearfix grpelem" id="u1748-4" for="widgetu1746_input"><!-- content --><span class="actAsPara">Имя:</span></label>
-      <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u1747-4"><!-- content --><input class="wrapped-input" type="text" spellcheck="false" id="widgetu1746_input" name="custom_U1746" tabindex="1"/><label class="wrapped-input fld-prompt" id="widgetu1746_prompt" for="widgetu1746_input"><span class="actAsPara">Введите имя</span></label></span>
-      <div class="fld-message clearfix grpelem" id="u1749-4"><!-- content -->
-       <p>Обязательное поле</p>
-      </div>
+    <div class="clearfix colelem" id="paccordionu37802"><!-- group -->
+     <ul class="AccordionWidget clearfix grpelem" id="accordionu37802"><!-- vertical box -->
+      <li class="AccordionPanel borderbox clearfix colelem" id="u37803"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37804"><!-- state-based BG images --><img alt="E-mail:" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u37805"><!-- group --><div class="grpelem" id="u37806"><!-- state-based BG images --><img alt="goganihe@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u37811"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37812"><!-- state-based BG images --><img alt="Vk.com:" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent borderbox clearfix colelem" id="u37813"><!-- group --><a class="nonblock nontext grpelem" id="u37814" href="https://vk.com/goganihe"><!-- state-based BG images --><div id="u37814_states"><img alt="https://vk.com/goganihe" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u37914"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37917"><!-- state-based BG images --><img alt="YouTube" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent disn borderbox colelem" id="u37915"><!-- simple frame --></div></li>
+     </ul>
+     <div class="clearfix grpelem" id="pu37950"><!-- column -->
+      <div class="colelem" id="u37950"><!-- simple frame --></div>
+      <img class="colelem" id="u37949-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании " src="images/u37949-4.png?crc=11033857" data-image-width="194"/><!-- rasterized frame -->
      </div>
-     <div class="fld-grp clearfix grpelem" id="widgetu1738" data-required="false" data-type="email"><!-- none box -->
-      <label class="fld-label actAsDiv clearfix grpelem" id="u1739-4" for="widgetu1738_input"><!-- content --><span class="actAsPara">Электронная почта:</span></label>
-      <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u1741-4"><!-- content --><input class="wrapped-input" type="email" spellcheck="false" id="widgetu1738_input" name="Email" tabindex="2"/><label class="wrapped-input fld-prompt" id="widgetu1738_prompt" for="widgetu1738_input"><span class="actAsPara">Введите адрес электронной почты</span></label></span>
-      <div class="fld-message clearfix grpelem" id="u1740-4"><!-- content -->
-       <p>Обязательное поле</p>
-      </div>
+     <div class="clearfix grpelem" id="pu37944"><!-- column -->
+      <div class="colelem" id="u37944"><!-- simple frame --></div>
+      <img class="colelem" id="u37943-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании" src="images/u37943-4.png?crc=11033857" data-image-width="194"/><!-- rasterized frame -->
      </div>
-     <div class="clearfix grpelem" id="u1750-4"><!-- content -->
-      <p>Отправка формы…</p>
-     </div>
-     <img class="grpelem" id="u1751" alt="На сервере произошла ошибка." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-     <img class="grpelem" id="u1752" alt="Форма получена." src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-     <button class="submit-btn NoWrap grpelem" id="u1733" alt="Отправить" src="images/blank.gif?crc=4208392903" type="submit" value="" tabindex="4"><!-- state-based BG images --></button>
-     <div class="fld-grp clearfix grpelem" id="widgetu1713" data-required="true"><!-- none box -->
-      <label class="fld-label actAsDiv clearfix grpelem" id="u1715-4" for="widgetu1713_input"><!-- content --><span class="actAsPara">Сообщение:</span></label>
-      <span class="fld-textarea actAsDiv clearfix grpelem" id="u1714-4"><!-- content --><textarea class="wrapped-input" id="widgetu1713_input" name="custom_U1713" tabindex="3"></textarea><label class="wrapped-input fld-prompt" id="widgetu1713_prompt" for="widgetu1713_input"><span class="actAsPara">Введите сообщение</span></label></span>
-     </div>
-    </form>
-    <div class="verticalspacer" data-offset-top="484" data-content-above-spacer="483" data-content-below-spacer="60"></div>
+    </div>
+    <div class="verticalspacer" data-offset-top="530" data-content-above-spacer="529" data-content-below-spacer="60"></div>
    </div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
-   <img class="preload" src="images/u1034-r.png?crc=4199459734" alt=""/>
-   <img class="preload" src="images/u1034-a.png?crc=4053499718" alt=""/>
-   <img class="preload" src="images/u1037-r.png?crc=3983704579" alt=""/>
-   <img class="preload" src="images/u1037-a.png?crc=388286857" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=144375484" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=502366057" alt=""/>
-   <img class="preload" src="images/u1051-r.png?crc=3860389612" alt=""/>
-   <img class="preload" src="images/u1051-a.png?crc=3779369661" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
+   <img class="preload" src="images/u1037-r.png?crc=3987155826" alt=""/>
+   <img class="preload" src="images/u1037-a.png?crc=3875418341" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
-   <img class="preload" src="images/u1751-fse.png?crc=3954800974" alt=""/>
-   <img class="preload" src="images/u1752-fss.png?crc=422692818" alt=""/>
-   <img class="preload" src="images/u1733-r.png?crc=478168236" alt=""/>
-   <img class="preload" src="images/u1733-m.png?crc=3828451325" alt=""/>
-   <img class="preload" src="images/u1733-fs.png?crc=394434906" alt=""/>
+   <img class="preload" src="images/u37804-r.png?crc=523803752" alt=""/>
+   <img class="preload" src="images/u37804-a.png?crc=408217062" alt=""/>
+   <img class="preload" src="images/u37806-r.png?crc=86013735" alt=""/>
+   <img class="preload" src="images/u37812-r.png?crc=185757292" alt=""/>
+   <img class="preload" src="images/u37812-a.png?crc=4147250606" alt=""/>
+   <img class="preload" src="images/u37814_states-r.png?crc=3837972733" alt=""/>
+   <img class="preload" src="images/u37917-r.png?crc=4204397846" alt=""/>
+   <img class="preload" src="images/u37917-a.png?crc=3784094034" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -124,13 +118,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Некоторые файлы на сервере могут отсутствовать или быть некорректными. Очистите кэш-память браузера и повторите попытку. Если проблему не удается устранить, свяжитесь с разработчиками сайта.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","musewpdisclosure","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-Muse.Utils.initWidget('#widgetu1712', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu1712 */
+Muse.Utils.initWidget('#accordionu37802', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:1}); });/* #accordionu37802 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
