--- a/competition.html
+++ b/competition.html
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
-  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=3997064722" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=104316242" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -74,41 +74,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="ppu37961-4"><!-- group -->
-     <div class="clearfix grpelem" id="pu37961-4"><!-- group -->
-      <img class="grpelem" id="u37961-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter " src="images/u37961-4.png?crc=133278613" data-image-width="199"/><!-- rasterized frame -->
-      <div class="grpelem" id="u37962"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="pppu37962"><!-- group -->
+     <div class="clearfix grpelem" id="ppu37962"><!-- column -->
+      <div class="clearfix colelem" id="pu37962"><!-- group -->
+       <div class="grpelem" id="u37962"><!-- simple frame --></div>
+       <img class="grpelem" id="u38003-4" alt="Тех. требования" src="images/u38003-4.png?crc=4158428546" data-image-width="220"/><!-- rasterized frame -->
+      </div>
+      <img class="colelem" id="u37961-11" alt="-Моторы Коллекторные 7*16 Max -Рама до 65мм -Видеопередатчик с raceband 25мвт " src="images/u37961-11.png?crc=504963809" data-image-width="220"/><!-- rasterized frame -->
+      <div class="clearfix colelem" id="u38046"><!-- group -->
+       <nav class="MenuBar clearfix grpelem" id="menuu38311"><!-- horizontal box -->
+        <div class="MenuItemContainer clearfix grpelem" id="u38319"><!-- vertical box -->
+         <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u38320"><!-- horizontal box -->
+          <img class="MenuItemLabel NoWrap grpelem" id="u38322" alt="Регистрация" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+         </div>
+        </div>
+       </nav>
+      </div>
      </div>
      <div class="clearfix grpelem" id="u37928"><!-- column -->
-      <div class="clearfix colelem" id="u37925"><!-- group -->
-       <img class="grpelem" id="u38003-4" alt="Этап 1" src="images/u38003-4.png?crc=214262454" data-image-width="68"/><!-- rasterized frame -->
-      </div>
-      <div class="clearfix colelem" id="u37994"><!-- group -->
-       <img class="grpelem" id="u38000-4" alt="дд-мм-гг, чч:мм" src="images/u38000-4.png?crc=4225080953" data-image-width="95"/><!-- rasterized frame -->
+      <div class="position_content" id="u37928_position_content">
+       <div class="clearfix colelem" id="u37925"><!-- group -->
+        <img class="grpelem" id="u38000-4" alt="01.01.2000" src="images/u38000-4.png?crc=502559265" data-image-width="94"/><!-- rasterized frame -->
+       </div>
+       <div class="clearfix colelem" id="pu38033"><!-- group -->
+        <div class="clip_frame grpelem" id="u38033"><!-- image -->
+         <img class="block" id="u38033_img" src="images/5rxugqpyaru-crop-u38033.jpg?crc=405620819" alt="" data-image-width="396" data-image-height="247"/>
+        </div>
+        <div class="grpelem" id="u37994"><!-- simple frame --></div>
+        <div class="grpelem" id="u38385"><!-- simple frame --></div>
+        <img class="grpelem" id="u38296-4" alt="Брест" src="images/u38296-4.png?crc=4181279277" data-image-width="117"/><!-- rasterized frame -->
+       </div>
       </div>
      </div>
      <div class="grpelem" id="u37991"><!-- state-based BG images -->
-      <img alt="TinyWhoop Madness" src="images/blank.gif?crc=4208392903"/>
+      <img alt="TinyWhoop" src="images/blank.gif?crc=4208392903"/>
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu37967"><!-- group -->
-     <div class="grpelem" id="u37967"><!-- simple frame --></div>
-     <div class="grpelem" id="u37974"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix colelem" id="pu37968"><!-- group -->
-     <div class="grpelem" id="u37968"><!-- simple frame --></div>
-     <img class="grpelem" id="u37973-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No " src="images/u37973-4.png?crc=4125754407" data-image-width="199"/><!-- rasterized frame -->
-    </div>
-    <div class="clearfix colelem" id="pu37979"><!-- group -->
-     <div class="grpelem" id="u37979"><!-- simple frame --></div>
-     <div class="grpelem" id="u37982"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix colelem" id="pu37980"><!-- group -->
-     <div class="grpelem" id="u37980"><!-- simple frame --></div>
-     <img class="grpelem" id="u37981-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No " src="images/u37981-4.png?crc=4125754407" data-image-width="199"/><!-- rasterized frame -->
-    </div>
-    <div class="verticalspacer" data-offset-top="1166" data-content-above-spacer="1166" data-content-below-spacer="60"></div>
+    <div class="verticalspacer" data-offset-top="520" data-content-above-spacer="520" data-content-below-spacer="60"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -122,7 +125,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
-   <img class="preload" src="images/u37991-r.png?crc=4129216664" alt=""/>
+   <img class="preload" src="images/u38322-r.png?crc=3978633121" alt=""/>
+   <img class="preload" src="images/u37991-r.png?crc=4239879617" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
