--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3784045557" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=64407367" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -71,6 +71,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
+    <div class="clearfix colelem" id="pu35808"><!-- group -->
+     <div class="grpelem" id="u35808"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="grpelem" id="u35821"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <div class="clip_frame grpelem" id="u35817"><!-- image -->
+      <img class="block" id="u35817_img" src="images/untitled_by_elgama-d5hhapn-crop-u35817.jpg?crc=47024588" alt="" data-image-width="548" data-image-height="233"/>
+     </div>
+     <div class="grpelem" id="u35820"><!-- state-based BG images -->
+      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
+      <div class="fluid_height_spacer"></div>
+     </div>
+    </div>
    </div>
    <div class="clearfix grpelem" id="pmenuu36157"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36157"><!-- horizontal box -->
@@ -88,7 +103,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <img class="grpelem" id="u34831-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u34831-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+   <div class="clearfix grpelem" id="pu34831-4"><!-- column -->
+    <img class="colelem" id="u34831-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u34831-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+    <img class="colelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+   </div>
    <div class="clearfix grpelem" id="pmenuu36173"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36173"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36174"><!-- vertical box -->
@@ -106,13 +124,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <nav class="MenuBar clearfix grpelem" id="menuu34832"><!-- horizontal box -->
-    <div class="MenuItemContainer clearfix grpelem" id="u34833"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u34836"><!-- horizontal box -->
-      <img class="MenuItemLabel NoWrap grpelem" id="u34839" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+   <div class="clearfix grpelem" id="pmenuu34832"><!-- column -->
+    <nav class="MenuBar clearfix colelem" id="menuu34832"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u34833"><!-- vertical box -->
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u34836"><!-- horizontal box -->
+       <img class="MenuItemLabel NoWrap grpelem" id="u34839" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+      </div>
      </div>
-    </div>
-   </nav>
+    </nav>
+    <nav class="MenuBar clearfix colelem" id="menuu35809"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
+      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
+       <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+      </div>
+     </div>
+    </nav>
+   </div>
    <div class="clearfix grpelem" id="pmenuu36197"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36197"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36198"><!-- vertical box -->
@@ -149,6 +176,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
     </div>
     <img class="colelem" id="u34840-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u34840-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
+    <img class="colelem" id="u35819-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u35819-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
    </div>
    <div id="u35596-wrapper">
     <a class="nonblock nontext anim_swing" id="u35596" href="index.html#werh"><!-- simple frame --></a>
@@ -162,7 +190,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div id="u35655-4-wrapper">
     <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="526" data-content-above-spacer="581" data-content-below-spacer="59"></div>
+   <div class="verticalspacer" data-offset-top="870" data-content-above-spacer="925" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
@@ -174,6 +202,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u34841-r.png?crc=522824681" alt=""/>
+   <img class="preload" src="images/u35820-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36180-a.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36188-r.png?crc=293193988" alt=""/>
@@ -181,6 +210,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u36192-r.png?crc=187296679" alt=""/>
    <img class="preload" src="images/u36192-a.png?crc=187296679" alt=""/>
    <img class="preload" src="images/u34839-r.png?crc=71748046" alt=""/>
+   <img class="preload" src="images/u35815-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u36203-r.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u36203-a.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
