--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpdisclosure.js", "contacts.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "contacts.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=493365755" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=279198188" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -74,22 +74,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="paccordionu37802"><!-- group -->
-     <ul class="AccordionWidget clearfix grpelem" id="accordionu37802"><!-- vertical box -->
-      <li class="AccordionPanel borderbox clearfix colelem" id="u37803"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37804"><!-- state-based BG images --><img alt="E-mail:" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u37805"><!-- group --><div class="grpelem" id="u37806"><!-- state-based BG images --><img alt="goganihe@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u37811"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37812"><!-- state-based BG images --><img alt="Vk.com:" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent borderbox clearfix colelem" id="u37813"><!-- group --><a class="nonblock nontext grpelem" id="u37814" href="https://vk.com/goganihe"><!-- state-based BG images --><div id="u37814_states"><img alt="https://vk.com/goganihe" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u37914"><!-- vertical box --><div class="AccordionPanelTab colelem" id="u37917"><!-- state-based BG images --><img alt="YouTube" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div><div class="AccordionPanelContent disn borderbox colelem" id="u37915"><!-- simple frame --></div></li>
-     </ul>
-     <div class="clearfix grpelem" id="pu37950"><!-- column -->
-      <div class="colelem" id="u37950"><!-- simple frame --></div>
-      <img class="colelem" id="u37949-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании " src="images/u37949-4.png?crc=11033857" data-image-width="194"/><!-- rasterized frame -->
-     </div>
-     <div class="clearfix grpelem" id="pu37944"><!-- column -->
-      <div class="colelem" id="u37944"><!-- simple frame --></div>
-      <img class="colelem" id="u37943-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании" src="images/u37943-4.png?crc=11033857" data-image-width="194"/><!-- rasterized frame -->
+    <div class="clearfix colelem" id="u38389"><!-- group -->
+     <div class="clearfix grpelem" id="u38394-4"><!-- content -->
+      <p id="u38394-2">E-mail</p>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="530" data-content-above-spacer="529" data-content-below-spacer="60"></div>
+    <div class="colelem" id="u38403"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="pu37950"><!-- group -->
+     <div class="clearfix grpelem" id="u37950"><!-- group -->
+      <div class="clearfix grpelem" id="u38397-4"><!-- content -->
+       <p id="u38397-2">Vk.com</p>
+      </div>
+     </div>
+     <div class="clearfix grpelem" id="u37944"><!-- group -->
+      <div class="clearfix grpelem" id="u38400-4"><!-- content -->
+       <p id="u38400-2">YouTube</p>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="541" data-content-above-spacer="541" data-content-below-spacer="60"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -103,14 +106,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
-   <img class="preload" src="images/u37804-r.png?crc=523803752" alt=""/>
-   <img class="preload" src="images/u37804-a.png?crc=408217062" alt=""/>
-   <img class="preload" src="images/u37806-r.png?crc=86013735" alt=""/>
-   <img class="preload" src="images/u37812-r.png?crc=185757292" alt=""/>
-   <img class="preload" src="images/u37812-a.png?crc=4147250606" alt=""/>
-   <img class="preload" src="images/u37814_states-r.png?crc=3837972733" alt=""/>
-   <img class="preload" src="images/u37917-r.png?crc=4204397846" alt=""/>
-   <img class="preload" src="images/u37917-a.png?crc=3784094034" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -118,13 +113,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Некоторые файлы на сервере могут отсутствовать или быть некорректными. Очистите кэш-память браузера и повторите попытку. Если проблему не удается устранить, свяжитесь с разработчиками сайта.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","musewpdisclosure","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-Muse.Utils.initWidget('#accordionu37802', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:1}); });/* #accordionu37802 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
