--- a/competition.html
+++ b/competition.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Competition</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
-  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=104316242" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
+  <link rel="stylesheet" type="text/css" href="css/competition.css?crc=4157751784" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -48,9 +48,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
        </div>
       </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1036" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
@@ -74,44 +71,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="pppu37962"><!-- group -->
-     <div class="clearfix grpelem" id="ppu37962"><!-- column -->
-      <div class="clearfix colelem" id="pu37962"><!-- group -->
-       <div class="grpelem" id="u37962"><!-- simple frame --></div>
-       <img class="grpelem" id="u38003-4" alt="Тех. требования" src="images/u38003-4.png?crc=4158428546" data-image-width="220"/><!-- rasterized frame -->
-      </div>
-      <img class="colelem" id="u37961-11" alt="-Моторы Коллекторные 7*16 Max -Рама до 65мм -Видеопередатчик с raceband 25мвт " src="images/u37961-11.png?crc=504963809" data-image-width="220"/><!-- rasterized frame -->
-      <div class="clearfix colelem" id="u38046"><!-- group -->
-       <nav class="MenuBar clearfix grpelem" id="menuu38311"><!-- horizontal box -->
-        <div class="MenuItemContainer clearfix grpelem" id="u38319"><!-- vertical box -->
-         <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u38320"><!-- horizontal box -->
-          <img class="MenuItemLabel NoWrap grpelem" id="u38322" alt="Регистрация" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-         </div>
-        </div>
-       </nav>
-      </div>
+    <div class="clearfix colelem" id="pu38420"><!-- group -->
+     <div class="grpelem" id="u38420"><!-- content -->
+      <div class="fluid_height_spacer"></div>
      </div>
-     <div class="clearfix grpelem" id="u37928"><!-- column -->
-      <div class="position_content" id="u37928_position_content">
-       <div class="clearfix colelem" id="u37925"><!-- group -->
-        <img class="grpelem" id="u38000-4" alt="01.01.2000" src="images/u38000-4.png?crc=502559265" data-image-width="94"/><!-- rasterized frame -->
-       </div>
-       <div class="clearfix colelem" id="pu38033"><!-- group -->
-        <div class="clip_frame grpelem" id="u38033"><!-- image -->
-         <img class="block" id="u38033_img" src="images/5rxugqpyaru-crop-u38033.jpg?crc=405620819" alt="" data-image-width="396" data-image-height="247"/>
-        </div>
-        <div class="grpelem" id="u37994"><!-- simple frame --></div>
-        <div class="grpelem" id="u38385"><!-- simple frame --></div>
-        <img class="grpelem" id="u38296-4" alt="Брест" src="images/u38296-4.png?crc=4181279277" data-image-width="117"/><!-- rasterized frame -->
+     <div class="grpelem" id="u38421"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
+     <nav class="MenuBar clearfix grpelem" id="menuu38422"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u38423"><!-- vertical box -->
+       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u38424"><!-- horizontal box -->
+        <img class="MenuItemLabel NoWrap grpelem" id="u38425" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
        </div>
       </div>
+     </nav>
+     <div class="clip_frame grpelem" id="u38430"><!-- image -->
+      <img class="block" id="u38430_img" src="images/untitled_by_elgama-d5hhapn-crop-u38430.jpg?crc=47024588" alt="" data-image-width="548" data-image-height="233"/>
      </div>
-     <div class="grpelem" id="u37991"><!-- state-based BG images -->
-      <img alt="TinyWhoop" src="images/blank.gif?crc=4208392903"/>
+     <img class="grpelem" id="u38432-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u38432-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+     <img class="grpelem" id="u38433-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u38433-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
+     <div class="grpelem" id="u38434"><!-- state-based BG images -->
+      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="520" data-content-above-spacer="520" data-content-below-spacer="60"></div>
+    <div class="verticalspacer" data-offset-top="526" data-content-above-spacer="525" data-content-below-spacer="60"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -119,14 +103,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
-   <img class="preload" src="images/u1037-r.png?crc=3987155826" alt=""/>
-   <img class="preload" src="images/u1037-a.png?crc=3875418341" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
-   <img class="preload" src="images/u38322-r.png?crc=3978633121" alt=""/>
-   <img class="preload" src="images/u37991-r.png?crc=4239879617" alt=""/>
+   <img class="preload" src="images/u38425-r.png?crc=71748046" alt=""/>
+   <img class="preload" src="images/u38434-r.png?crc=522824681" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
