--- a/contacts.html
+++ b/contacts.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4162175737"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=279198188" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=480850969" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -27,81 +27,54 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu2056"><!-- group -->
-     <div class="grpelem" id="u2056"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <div class="grpelem" id="u847"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <div class="grpelem" id="u1026"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
-       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
-        <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-       </div>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1035"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1036" href="contacts.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1037" alt="КОНТАКТЫ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-     </nav>
-     <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
-     <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
-      <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
-       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
-        <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
-         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
-         <div class="fluid_height_spacer"></div>
-        </div>
-       </div>
-       <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
-        <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
-         <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
-         <li class="MenuItemContainer borderbox clearfix colelem" id="u1619"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1620"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1623-4"><!-- content --><div id="u1623-3"><p>Яндекс.Деньги</p></div></div></div></li>
-         <li class="MenuItemContainer borderbox clearfix colelem" id="u1598"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1599"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1602-4"><!-- content --><div id="u1602-3"><p>QIWI</p></div></div></div></li>
-        </ul>
-       </div>
-      </div>
-     </nav>
-    </div>
-    <div class="clearfix colelem" id="u38389"><!-- group -->
-     <div class="clearfix grpelem" id="u38394-4"><!-- content -->
-      <p id="u38394-2">E-mail</p>
-     </div>
-    </div>
-    <div class="colelem" id="u38403"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="pu37950"><!-- group -->
-     <div class="clearfix grpelem" id="u37950"><!-- group -->
-      <div class="clearfix grpelem" id="u38397-4"><!-- content -->
-       <p id="u38397-2">Vk.com</p>
-      </div>
-     </div>
-     <div class="clearfix grpelem" id="u37944"><!-- group -->
-      <div class="clearfix grpelem" id="u38400-4"><!-- content -->
-       <p id="u38400-2">YouTube</p>
-      </div>
-     </div>
-    </div>
-    <div class="verticalspacer" data-offset-top="541" data-content-above-spacer="541" data-content-below-spacer="60"></div>
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="grpelem" id="u2056"><!-- content -->
+    <div class="fluid_height_spacer"></div>
    </div>
+   <div class="grpelem" id="u847"><!-- content -->
+    <div class="fluid_height_spacer"></div>
+   </div>
+   <div class="grpelem" id="u1026"><!-- content -->
+    <div class="fluid_height_spacer"></div>
+   </div>
+   <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="НОВОСТИ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
+      <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="ФОРУМ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+     </div>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="competition.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="СОРЕВНОВАНИЯ" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+    </div>
+   </nav>
+   <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
+   <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
+    <div class="MenuItemContainer borderbox clearfix grpelem" id="u1515"><!-- vertical box -->
+     <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
+      <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
+       <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+       <div class="fluid_height_spacer"></div>
+      </div>
+     </div>
+     <div class="SubMenu MenuLevel1 borderbox clearfix" id="u1516"><!-- vertical box -->
+      <ul class="SubMenuView borderbox clearfix colelem" id="u1517"><!-- vertical box -->
+       <li class="MenuItemContainer borderbox clearfix colelem" id="u1577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1579"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1583-4"><!-- content --><div id="u1583-3"><p>Pay Pal</p></div></div></div></li>
+       <li class="MenuItemContainer borderbox clearfix colelem" id="u1619"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1620"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1623-4"><!-- content --><div id="u1623-3"><p>Яндекс.Деньги</p></div></div></div></li>
+       <li class="MenuItemContainer borderbox clearfix colelem" id="u1598"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u1599"><!-- horizontal box --><div class="MenuItemLabel NoWrap borderbox clearfix grpelem" id="u1602-4"><!-- content --><div id="u1602-3"><p>QIWI</p></div></div></div></li>
+      </ul>
+     </div>
+    </div>
+   </nav>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="211" data-content-below-spacer="500"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=3931870523" alt=""/>
    <img class="preload" src="images/u37719-r.png?crc=279150861" alt=""/>
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
-   <img class="preload" src="images/u1037-r.png?crc=3987155826" alt=""/>
-   <img class="preload" src="images/u1037-a.png?crc=3875418341" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
